# conways_game_of_life

./: .gitignore  README.md
conways_game_of_life_bench/: Cargo.toml
conways_game_of_life_bench/benches/: default_benchmark.rs
conways_game_of_life_impl/: Cargo.toml
conways_game_of_life_impl/benches/: benchmark.rs
conways_game_of_life_impl/src/: config.rs  frame_regulator.rs  lib.rs  main.rs
conways_game_of_life_sdl/: Cargo.toml
conways_game_of_life_sdl/benches/: benchmark.rs
conways_game_of_life_sdl/src/: input_pump.rs  lib.rs  main.rs  renderer.rs
conways_game_of_life_sdl/src/render/: mod.rs  new_cell_color.rs
conways_game_of_life_sdl/src/renderer/: mod.rs  new_cell_color.rs
