[package]
name = "conways_game_of_life_bench"
version = "0.1.0"
authors = ["bobby"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conways_game_of_life_impl = {path = "../conways_game_of_life_impl"}
criterion = "*"

[[bench]]
name = "default_benchmark"
harness = false