[package]
name = "conways_game_of_life_impl"
version = "0.1.0"
authors = ["bobby"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "benchmark"
harness = false
