[package]
name = "conways_game_of_life_sdl"
version = "0.1.0"
authors = ["bobby"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "*"
conways_game_of_life_impl = {path = "../conways_game_of_life_impl"}

[dev-dependencies]
criterion = "*"

[features]
default = ["sdl2/bundled"]

[[bench]]
name = "benchmark"
harness = false
